rtest/tests/jsr335/Semantics/MethodReferenceAnalysis/ExprMethodReference/ShouldCompile/syntax10/Test.java
// .result=COMPILE_PASS

public class Test {
	
	interface A {
		int m(int a);
	}
	
	public <T, S> int meth(T t) {
		return 3;
	}
	
	public void method(int i) {
		A a = this::meth;
	}
}